# rust-python-project-template

./: .coveragerc  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: test.yaml
scripts/: build.sh  clean.sh  format.sh  install-ci.sh  install.sh  lint.sh  publish.sh  test.sh
src/: lib.rs
tests/: test_main.py  test_version.py
